# TissueStack

./: .gitignore  BUILD_ME_LIKE_THIS_FOR_CVL.sh  BUILD_ME_LIKE_THIS_FOR_DEB.sh  BUILD_ME_LIKE_THIS_FOR_RPM.sh  BUILD_RPM.sh  CMakeLists.txt  COPYING  Dockerfile  Makefile  Makefile.am  Makefile.centOS  Makefile.in  README  README.md  _config.yml  aclocal.m4  buildMe.sh  canvas.html  check  configure  configure.ac  dcmtk.spec  default.env  docker-compose.yml  index.html  package.json  params.json  pom.xml  tissuestack-db.sh  webpack.config.js
SPECS/: minc.spec  minc_suse.spec  nifti.spec  pqxx-devel.spec
_posts/: 2013-08-27-welcome-to-jekyll.markdown
config/: config.status
cvl/: BUILD_ME_LIKE_THIS_FOR_CVL.sh  CMakeLists.txt  check  config  validate_module.sh
dcmdata/: Makefile  config.status
dcmimage/: Makefile  config.status
dcmimgle/: Makefile  config.status
dcmjpeg/: Makefile  config.status
dcmjpls/: Makefile  config.status
dcmnet/: Makefile  config.status
dcmpstat/: Makefile  config.status
dcmqrdb/: Makefile  config.status
dcmsign/: Makefile  config.status
dcmsr/: Makefile  config.status
dcmtls/: Makefile  config.status
dcmwlm/: Makefile  config.status
deb/: changelog  control  install  rules
docker/: README.md  default.env  docker-compose.yml  init-db.sh  postgres.Dockerfile  tissuestack.Dockerfile
doxygen/: Makefile  config.status
files/: ts_cl
js/: TissueStack.Canvas.js  TissueStack.Extent.js  TissueStack.Init.js  TissueStack.Queue.js  TissueStack.Utils.js  TissueStack.js  brain.js
oflog/: Makefile  config.status
(+2596 files in other folders)
